[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Sandeep Gusain <sandeep.gusain3761@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
python-dotenv = "^0.19.2"
mysql-connector-python = "^8.0.28"
configparser = "^5.2.0"
mysql-connector = "^2.2.9"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
